web-infras/parser/tests/fixtures/babel/es2020/import-meta/error-in-script/output.txt
[SyntaxError]: import.meta may appear only with 'sourceType: "module" (1,11)
1|const x = import.meta;
 |         ^
